--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   responsive_framework: ^1.5.1
   provider: ^6.1.2
+  gap: ^3.0.1
 
 dev_dependencies:
   flutter_test:
